# xsensmti-py

./: CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ubuntu.yml
docs/debug/: modemmanager_blocks_serial_port.md  mti_gotoconfig_not_responding.md
docs/dev-notes/: mti_device_plan.md
docs/notes/: modemmanager_udev_fix.txt
scripts/: example.py  manage_devices.py  parse_mtdata2.py  read_device.py  read_device_config.py  record_chunks.py  replay_chunks.py  replay_xbus_messages.py  serial_recorder.py
src/libtemp/: __init__.py  common.py  entrypoint.py  math.py
src/xsens/mtdata2/: decode.py  reading_decode.py
src/xsens/tools/: __init__.py  cli.py  exceptions.py  presets.py  serial_io.py
src/xsens/tools/cli/: actions.py  commands.py
src/xsens/tools/configurator/: __init__.py  configurator.py
src/xsens/tools/recorder/: __init__.py  recorder.py
src/xsens/tools/scanner/: __init__.py  scanner.py
src/xsens/xbus/: __init__.py  data_types.py  datatypes.py  decode.py  encode.py  exceptions.py
src/xsensmti/: __init__.py  constants.py  exceptions.py  port.py
src/xsensmti/device/: __init__.py  communicator.py  datatypes.py  device.py  manager.py  scanner.py  session.py  xbus_reader.py
src/xsensmti/mtdata2/: __init__.py  datatypes.py  decode.py  exceptions.py  reading_decode.py  readings.py
src/xsensmti/serial/: __init__.py  operations.py  serial_io.py
src/xsensmti/session/: __init__.py  session.py
src/xsensmti/tools/: __init__.py  exceptions.py  serial_io.py
src/xsensmti/tools/cli/: __init__.py  actions.py  commands.py
src/xsensmti/tools/configurator/: configurator.py  presets.py
src/xsensmti/tools/recorder/: __init__.py  recorder.py
src/xsensmti/tools/scanner/: __init__.py  scanner.py
src/xsensmti/xbus/: __init__.py  datatypes.py  decode.py  encode.py  exceptions.py
tests/: test_common.py  test_math.py
tests/device/: test_datatypes.py  test_device.py  test_scanner.py
tests/mtdata2/: test_decode.py  test_integration.py  test_reading_decode.py
tests/tools/: test_package.py  test_presets.py
tests/xbus/: test_checksums.py  test_datatypes.py  test_decode.py  test_encode.py  test_package.py
