[project]
name = "xsens"
version = "0.1.0"
description = "A minimal python library for working with XSens MTi sensors."
readme = "README.md"
authors = [
    { name = "Martin Kvisvik Larsen", email = "martin.kvisvik.larsen@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "arrow>=1.3.0",
    "click>=8.1.7",
    "loguru>=0.7.3",
    "msgspec>=0.19.0",
    "mypy>=1.20.2",
    "pyserial>=3.5",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.3",
    "tqdm>=4.67.1",
]

[project.scripts]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xsens"]

[tool.uv]
package = true

[tool.ruff]
line-length = 88
