[project]
name = "xsens"
version = "0.1.0"
description = "A minimal python library for working with XSens MTi sensors."
readme = "README.md"
authors = [
    { name = "Martin Kvisvik Larsen", email = "martin.kvisvik.larsen@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "loguru>=0.7.3",
    "msgspec>=0.19.0",
    "pyserial>=3.5",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.1",
]

[project.scripts]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xsens"]

[tool.uv]
package = true

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[tool.ruff]
line-length = 88

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
]
